--- a/app/globals.css
+++ b/app/globals.css
@@ -123,6 +123,32 @@ body {
   height: 40rem;
   color: white;
 }
+.rent {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 40rem;
+  color: white;
+  background-image: url(./img/house.png);
+}
+
+.rent::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Adjust the alpha to control the overlay intensity */
+  z-index: 1;
+}
+
+.rent > div {
+  position: relative;
+  z-index: 2; /* Ensure content is above the overlay */
+}
+
 .learn {
   background-image: url(./img/image\ 11.png);
   background-size: cover;
