--- a/app/globals.css
+++ b/app/globals.css
@@ -165,6 +165,14 @@ body {
   background-repeat: no-repeat;
   color: white;
 }
+.verify{
+  background-image: url(./img/login.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+  height: 100vh;
+}
 .image{
   border-radius:  30px !important;
 }
