--- a/app/globals.css
+++ b/app/globals.css
@@ -181,7 +181,7 @@ body {
 }
 @media (max-width: 768px) {
   .aboutus {
-    background-image: url(./img/image\ 9.png);
+    background-image: url(./img/smallbg.png);
     background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
