--- a/app/globals.css
+++ b/app/globals.css
@@ -189,7 +189,7 @@ body {
     color: white;
   }
   .learn {
-    background-image: url(./img/learn.png);
+    background-image: url(./img/Learnsmall.png);
     background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
